--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,16 @@
 /public/bundles/
 /var/
 /vendor/
+/.idea
 ###< symfony/framework-bundle ###
 /.env
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
