Install set doctrine and migration

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -14,7 +14,7 @@ doctrine:
                 is_bundle: false
                 type: xml
                 dir: '%kernel.project_dir%/src/Users/Infrastructure/Database/ORM'
-                prefix: 'App\Entity'
+                prefix: 'App\Users\Domain\Entity'
                 alias: Users
 
 #when@test:
