--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,5 +27,17 @@ services:
     depends_on:
       - php-fpm
 
+  postgres:
+    container_name: postgres
+    build:
+      context: ./postgres
+    ports:
+      - ${POSTGRES_PORT}:54322
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - db_data:/var/lib/postgresql/data:rw
 volumes:
   db_data:
