--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
         "symfony/yaml": "6.1.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.1",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "liip/test-fixtures-bundle": "^2.0.0",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
