--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -6,3 +6,9 @@ services:
         resource: '%kernel.project_dir%/tests/Resource/Fixture/*'
         tags:
             - { "name": "doctrine.fixture.orm" }
+
+    App\Shared\Infrastructure\Bus\CommandBus:
+        public: true
+
+    App\Shared\Infrastructure\Bus\QueryBus:
+        public: true
